--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -24,11 +24,11 @@ jobs:
           ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
           ssh -i ./key.pem ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} -T <<EOF
-          REPO_DIR=~/logistics
+          REPO_DIR=~/mcp
           echo "Removing existing repository directory if exists"
           rm -rf \$REPO_DIR
           echo "Cloning repository from the relevant branch"
-          git clone --single-branch --branch ${{ github.ref_name }} https://github.com/ONDC-Official/Logistics-supply-demand-analysis.git \$REPO_DIR
+          git clone --single-branch --branch ${{ github.ref_name }} https://github.com/ONDC-Official/ondc-mcp.git \$REPO_DIR
           EOF
 
       - name: Install Docker Compose (if not installed)
@@ -49,7 +49,7 @@ jobs:
         run: |
           echo "Writing secrets to .env file"
           ssh -i ./key.pem ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} <<EOF
-          REPO_DIR=~/logistics
+          REPO_DIR=~/mcp
           echo "Writing environment variables to .env file"
           echo "FLASK_DEBUG=True" >> \$REPO_DIR/.env
           echo "FLASK_RUN_HOST=0.0.0.0" >> \$REPO_DIR/.env
@@ -60,7 +60,7 @@ jobs:
       - name: Verify .env and docker-compose.yml files
         run: |
           ssh -i ./key.pem ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} <<EOF
-          REPO_DIR=~/logistics
+          REPO_DIR=~/mcp
           # Check if .env and docker-compose.yml files exist
           if [ ! -f \$REPO_DIR/.env ]; then
             echo ".env file not found in \$REPO_DIR!"
@@ -77,7 +77,7 @@ jobs:
         run: |
           echo "Deploying with Docker Compose"
           ssh -i ./key.pem ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} <<EOF
-          REPO_DIR=~/logistics
+          REPO_DIR=~/mcp
           cd \$REPO_DIR
 
           # Ensure the .env and docker-compose.yml files exist
