--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -49,7 +49,7 @@ jobs:
         run: |
           echo "Writing secrets to .env file"
           ssh -i ./key.pem ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} <<EOF
-          REPO_DIR=~/mcp
+          REPO_DIR=~/mcp/mcp-backend
           echo "Writing environment variables to .env file"
           echo "FLASK_DEBUG=True" >> \$REPO_DIR/.env
           echo "FLASK_RUN_HOST=0.0.0.0" >> \$REPO_DIR/.env
@@ -60,7 +60,7 @@ jobs:
       - name: Verify .env and docker-compose.yml files
         run: |
           ssh -i ./key.pem ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} <<EOF
-          REPO_DIR=~/mcp
+          REPO_DIR=~/mcp/mcp-backend
           # Check if .env and docker-compose.yml files exist
           if [ ! -f \$REPO_DIR/.env ]; then
             echo ".env file not found in \$REPO_DIR!"
@@ -73,25 +73,25 @@ jobs:
           echo ".env and docker-compose.yml files found."
           EOF
 
-      - name: Automation Mock Server Deployment
-        run: |
-          echo "Deploying with Docker Compose"
-          ssh -i ./key.pem ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} <<EOF
-          REPO_DIR=~/mcp
-          cd \$REPO_DIR
+      # - name: Automation Mock Server Deployment
+      #   run: |
+      #     echo "Deploying with Docker Compose"
+      #     ssh -i ./key.pem ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} <<EOF
+      #     REPO_DIR=~/mcp
+      #     cd \$REPO_DIR
 
-          # Ensure the .env and docker-compose.yml files exist
-          if [ ! -f .env ]; then
-            echo ".env file not found!"
-            exit 1
-          fi
+      #     # Ensure the .env and docker-compose.yml files exist
+      #     if [ ! -f .env ]; then
+      #       echo ".env file not found!"
+      #       exit 1
+      #     fi
 
-          if [ ! -f docker-compose.yml ]; then
-            echo "docker-compose.yml file not found!"
-            exit 1
-          fi
+      #     if [ ! -f docker-compose.yml ]; then
+      #       echo "docker-compose.yml file not found!"
+      #       exit 1
+      #     fi
 
-          # Start the containers using Docker Compose
-          echo "Running docker-compose up -d --build"
-          sudo docker compose up -d --build
-          EOF
+      #     # Start the containers using Docker Compose
+      #     echo "Running docker-compose up -d --build"
+      #     sudo docker compose up -d --build
+      #     EOF
