--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -50,6 +50,7 @@ jobs:
           echo "Writing secrets to .env file"
           ssh -i ./key.pem ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} <<EOF
           REPO_DIR="$HOME/mcp/mcp-backend"
+          touch "\$REPO_DIR/.env"
           echo "Writing environment variables to .env file"
           echo "FLASK_DEBUG=True" >> \$REPO_DIR/.env
           echo "FLASK_RUN_HOST=0.0.0.0" >> \$REPO_DIR/.env
