--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -2,8 +2,8 @@ name: mcp frontend deployment
 
 on:
   workflow_dispatch:
-  push:
-    branches: ["main"]
+  # push:
+  #   branches: ["main"]
 
 jobs:
   deployment:
@@ -51,16 +51,37 @@ jobs:
           ssh -i ./key.pem ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} <<EOF
           REPO_DIR=~/mcp
           echo "Writing environment variables to .env file"
-          echo "FLASK_DEBUG=True" >> \$REPO_DIR/.env
-          echo "FLASK_RUN_HOST=0.0.0.0" >> \$REPO_DIR/.env
-          echo "FLASK_RUN_PORT=${{ vars.FLASK_RUN_PORT }}" >> \$REPO_DIR/.env
-          echo "GEOJSON_FILE=${{ vars.GEOJSON_FILE }}" >> \$REPO_DIR/.env
+          # echo "FLASK_DEBUG=True" >> \$REPO_DIR/.env
+          # echo "FLASK_RUN_HOST=0.0.0.0" >> \$REPO_DIR/.env
+
+          echo "VITE_PAYMENT_TEST_MODE=${{ vars.VITE_PAYMENT_TEST_MODE }}" >> \$REPO_DIR/himira-mcp-frontend/.env
+
+          echo "VITE_RAZORPAY_KEY_ID=${{ secrets.VITE_RAZORPAY_KEY_ID }}" >> \$REPO_DIR/himira-mcp-frontend/.env
+          echo "VITE_RAZORPAY_KEY_SECRET=${{ secrets.VITE_RAZORPAY_KEY_SECRET }}" >> \$REPO_DIR/himira-mcp-frontend/.env
+          echo "VITE_FIREBASE_API_KEY=${{ secrets.VITE_FIREBASE_API_KEY }}" >> \$REPO_DIR/himira-mcp-frontend/.env
+
+
+          echo "VITE_APP_NAME=${{ vars.VITE_APP_NAME }}" >> \$REPO_DIR/himira-mcp-frontend/.env
+          echo "VITE_API_BASE_URL=${{ vars.VITE_API_BASE_URL }}" >> \$REPO_DIR/himira-mcp-frontend/.env
+
+
+
+          echo "VITE_FIREBASE_APP_ID=${{ vars.VITE_FIREBASE_APP_ID }}" >> \$REPO_DIR/himira-mcp-frontend/.env
+          echo "VITE_FIREBASE_AUTH_DISABLE=${{ vars.VITE_FIREBASE_AUTH_DISABLE }}" >> \$REPO_DIR/himira-mcp-frontend/.env
+
+
+          echo "VITE_FIREBASE_AUTH_DOMAIN=${{ vars.VITE_FIREBASE_AUTH_DOMAIN }}" >> \$REPO_DIR/himira-mcp-frontend/.env
+          echo "VITE_FIREBASE_MESSAGING_SENDER_ID=${{ vars.VITE_FIREBASE_MESSAGING_SENDER_ID }}" >> \$REPO_DIR/himira-mcp-frontend/.env
+          echo "VITE_FIREBASE_PROJECT_ID=${{ vars.VITE_FIREBASE_PROJECT_ID }}" >> \$REPO_DIR/himira-mcp-frontend/.env
+          echo "VITE_FIREBASE_STORAGE_BUCKET=${{ vars.VITE_FIREBASE_STORAGE_BUCKET }}" >> \$REPO_DIR/himira-mcp-frontend/.env
+          echo "PORT=${{ vars.PORT }}" >> \$REPO_DIR/himira-mcp-frontend/.env
+
           EOF
 
       - name: Verify .env and docker-compose.yml files
         run: |
           ssh -i ./key.pem ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} <<EOF
-          REPO_DIR=~/mcp
+          REPO_DIR=~/mcp/himira-mcp-frontend
           # Check if .env and docker-compose.yml files exist
           if [ ! -f \$REPO_DIR/.env ]; then
             echo ".env file not found in \$REPO_DIR!"
@@ -77,7 +98,7 @@ jobs:
         run: |
           echo "Deploying with Docker Compose"
           ssh -i ./key.pem ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} <<EOF
-          REPO_DIR=~/mcp
+          REPO_DIR=~/mcp/himira-mcp-frontend
           cd \$REPO_DIR
 
           # Ensure the .env and docker-compose.yml files exist
