--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -114,5 +114,5 @@ jobs:
 
           # Start the containers using Docker Compose
           echo "Running docker-compose up -d --build"
-          sudo docker compose up -d --build
+          sudo docker-compose up -d --build
           EOF
