--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -2,8 +2,10 @@ name: mcp frontend deployment
 
 on:
   workflow_dispatch:
-  # push:
-  #   branches: ["main"]
+  push:
+    paths:
+      - "himira-mcp-frontend/**"
+    branches: ["main"]
 
 jobs:
   deployment:
@@ -24,7 +26,7 @@ jobs:
           ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
           ssh -i ./key.pem ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} -T <<EOF
-          REPO_DIR=~/mcp
+          REPO_DIR=~/mcp-frontend
           echo "Removing existing repository directory if exists"
           rm -rf \$REPO_DIR
           echo "Cloning repository from the relevant branch"
@@ -49,7 +51,7 @@ jobs:
         run: |
           echo "Writing secrets to .env file"
           ssh -i ./key.pem ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} <<EOF
-          REPO_DIR=~/mcp
+          REPO_DIR=~/mcp-frontend
           echo "Writing environment variables to .env file"
           # echo "FLASK_DEBUG=True" >> \$REPO_DIR/.env
           # echo "FLASK_RUN_HOST=0.0.0.0" >> \$REPO_DIR/.env
@@ -81,7 +83,7 @@ jobs:
       - name: Verify .env and docker-compose.yml files
         run: |
           ssh -i ./key.pem ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} <<EOF
-          REPO_DIR=~/mcp/himira-mcp-frontend
+          REPO_DIR=~/mcp-frontend/himira-mcp-frontend
           # Check if .env and docker-compose.yml files exist
           if [ ! -f \$REPO_DIR/.env ]; then
             echo ".env file not found in \$REPO_DIR!"
@@ -98,7 +100,7 @@ jobs:
         run: |
           echo "Deploying with Docker Compose"
           ssh -i ./key.pem ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} <<EOF
-          REPO_DIR=~/mcp/himira-mcp-frontend
+          REPO_DIR=~/mcp-frontend/himira-mcp-frontend
           cd \$REPO_DIR
 
           # Ensure the .env and docker-compose.yml files exist
