feat(SessionRedis): Added Session in MCP

--- a/mcp-backend/.env.example
+++ b/mcp-backend/.env.example
@@ -21,6 +21,13 @@ QDRANT_HOST=qdrant
 QDRANT_PORT=6333
 QDRANT_COLLECTION=himira_products
 
+# Redis Configuration
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB_BACKEND=1
+REDIS_DB_MCP=0
+REDIS_DB_MCP_PERSIS=2
+
 # Feature Flags
 HYBRID_SEARCH_ENABLED=true
 VECTOR_SEARCH_ENABLED=true
