--- a/mcp-backend/docker-compose.yml
+++ b/mcp-backend/docker-compose.yml
@@ -1,6 +1,20 @@
 version: '3.8'
 
 services:
+  # Redis for session management
+  redis:
+    image: redis:7.2.5-alpine
+    container_name: mcp-redis
+    ports:
+      - "6379:6379"
+    networks:
+      - backend-network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
   # Qdrant for vector search
   qdrant:
     image: qdrant/qdrant:latest
@@ -26,6 +40,7 @@ services:
     container_name: mcp-backend
     depends_on:
       - qdrant
+      - redis
     ports:
       - "8001:8001"  # API port for frontend
       - "9001:9001"  # Supervisord web interface
@@ -35,6 +50,11 @@ services:
       # Override specific values for Docker networking
       - QDRANT_HOST=qdrant
       - QDRANT_PORT=6333
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_DB_BACKEND=1
+      - REDIS_DB_MCP=0
+      - REDIS_DB_MCP_PERSIS=2
       # MCP Transport settings
       - MCP_TRANSPORT=stdio
       - PYTHONUNBUFFERED=1
